--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -33,7 +33,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — Category Creation Declaration",
-    "description": "EntityWorks formalised AI Discoverability into a discipline and introduced the EntityWorks Discoverability Index™ as the first structured, measurable standard.",
+    "description": "EntityWorks formalised AI Discoverability into a discipline and introduced the EntityWorks Discoverability Index™ as a structured, measurable standard.",
     "url": "https://entityworks.ai/category-creation-declaration",
     "about": {
       "@type": "Thing",
@@ -74,7 +74,7 @@
       <p>
         <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> We didn’t just identify a need; we
         created the discipline. We defined the principles, established the framework, and introduced the
-        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — the first structured, measurable standard for assessing how
+        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — a structured, measurable standard for assessing how
         AI systems understand and surface businesses.
       </p>
       <p>
@@ -113,7 +113,7 @@
       </p>
       <p>
         We are the first organisation to define it, structure it, and establish a formal methodology for assessing how businesses
-        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, the first measurable
+        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, a measurable
         standard for AI Discoverability.
       </p>
       <p>
