--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -5,7 +5,7 @@
   <title>AI Discoverability: Defining the Discipline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
+        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as a measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability">
 
   <style>
