--- a/position-on-ai-discoverability.html
+++ b/position-on-ai-discoverability.html
@@ -5,7 +5,7 @@
   <title>The EntityWorks Position on AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="The EntityWorks position on AI Discoverability, clarifying EntityWorks’ role in formalising it into a discipline and creating the a measurable standard.">
+        content="The EntityWorks position on AI Discoverability, clarifying EntityWorks’ role in formalising it into a discipline and creating a measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/position-on-ai-discoverability">
 
   <style>
