--- a/entity-understanding-layer.html
+++ b/entity-understanding-layer.html
@@ -100,7 +100,7 @@
       </p>
       <p>
         It does not describe a specific algorithm or vendor implementation. Instead, it provides a clear, neutral way to
-        talk about <em>what must be happening</em> inside any AI system that can reliably answer questions like:
+        talk about <em>what we can reasonably infer is happening</em> inside any AI system that can reliably answer questions like:
       </p>
       <ul>
         <li>“Who is this organisation?”</li>
