--- a/entity-understanding-layer.html
+++ b/entity-understanding-layer.html
@@ -161,7 +161,7 @@
     <section>
       <h2>How the EUL Relates to AI Discoverability and the EDI</h2>
       <p>
-        The Entity Understanding Layer™ explains <strong>how AI systems internally process entities</strong>.
+        The Entity Understanding Layer™ offers <strong>a way to think about how AI systems internally process entities</strong>.
         The discipline of <strong>AI Discoverability</strong> focuses on how clearly and consistently a business presents
         itself to those systems.
       </p>
