--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
       <a href="/discoverability-index.html">Discoverability Index</a>
+      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
