--- a/discoverability-index.html
+++ b/discoverability-index.html
@@ -73,10 +73,12 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>EntityWorks Discoverability Index™ (EDI)</h1>
     <p>The structured framework for measuring AI-ready business identity.</p>
+
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
@@ -89,20 +91,45 @@
   </header>
 
   <main>
-    <!-- (all your existing content unchanged) -->
-  </main>
 
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
-  </p>
+    <section>
+      <h2>What the EDI Is</h2>
+      <p>
+        AI systems are rapidly becoming the primary way people discover, evaluate, and interact with businesses. Yet until now,
+        there has been no standard for understanding how clearly a business is interpreted and surfaced by AI models.
+      </p>
+      <p>
+        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured 0–100 assessment of how clearly and
+        consistently AI systems can understand and surface a business entity.
+      </p>
+      <p>
+        It is not an SEO metric. It is not a marketing measure. It is a
+        <strong>machine-comprehension standard</strong> designed for the AI era.
+      </p>
+    </section>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
-</body>
-</html>
+    <section>
+      <h2>Why the EDI Exists</h2>
+      <p>
+        AI systems rely on structured data, machine-readable context, entity definitions, metadata integrity, cross-source
+        corroboration, and consistent naming and signals.
+      </p>
+      <p>
+        But businesses have never had a formal way to measure:
+      </p>
+      <ul>
+        <li>how understandable they are to AI</li>
+        <li>how coherent their machine identity is</li>
+        <li>whether AI models can reliably surface them</li>
+        <li>where ambiguity, drift, or inconsistency is occurring</li>
+        <li>whether their digital structure supports accurate AI interpretation</li>
+      </ul>
+      <p>
+        The EDI establishes the structural foundation required for businesses to be represented accurately in AI-led environments.
+      </p>
+    </section>
+
+    <section>
+      <h2>The Three Structural Pillars of the EDI</h2>
+      <p>
+        These pillars form the core dimensions of <strong>AI Discoverabil
