--- a/discoverability-index.html
+++ b/discoverability-index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks Discoverability Index™ (EDI)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
   <meta name="description"
         content="The EntityWorks Discoverability Index™ (EDI) is a structured 0–100 framework for measuring how clearly and consistently AI systems understand and surface a business entity.">
   <link rel="canonical" href="https://entityworks.ai/discoverability-index.html">
