--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>AI Discoverability: Defining the Discipline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
   <meta name="description"
-        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as a measurable standard.">
-  <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability">
+        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
+  <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability.html">
 
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
@@ -23,13 +24,8 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "AI Discoverability: Defining the Discipline",
-    "description": "EntityWorks defines AI Discoverability as a formal discipline with clear principles, structure, and a measurable index.",
-    "url": "https://entityworks.ai/defining-ai-discoverability",
-    "about": {
-      "@type": "Thing",
-      "name": "AI Discoverability",
-      "description": "A formal discipline focused on how AI systems understand and surface business entities."
-    },
+    "description": "EntityWorks formally defines AI Discoverability as a discipline with principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.",
+    "url": "https://entityworks.ai/defining-ai-discoverability.html",
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -41,7 +37,7 @@
 <body>
   <header>
     <h1>AI Discoverability: Defining the Discipline</h1>
-    <p>How EntityWorks formalised AI Discoverability into a coherent, measurable field.</p>
+    <p>Putting structure, language, and standards around how AI systems discover and represent businesses.</p>
 
     <nav>
       <a href="/">Home</a>
@@ -49,54 +45,95 @@
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
       <a href="/discoverability-index.html">Discoverability Index</a>
+      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>What Is AI Discoverability?</h2>
+      <h2>What is AI Discoverability?</h2>
       <p>
-        <strong>AI Discoverability</strong> is the discipline of ensuring that a business or entity is clearly understood,
-        consistently represented, and reliably surfaced by modern AI systems.
+        AI Discoverability is the discipline concerned with how AI systems understand, represent, and surface
+        business entities when people ask questions, search, or seek recommendations through AI interfaces.
       </p>
       <p>
-        It focuses on how models interpret entities — not just how humans search. That includes structure, consistency,
-        source alignment, and how information about a business is synthesised into answers for end users.
+        It goes beyond traditional SEO, which is centred on human-driven search engines and page rankings.
+        AI Discoverability focuses on whether AI systems can form an accurate, coherent internal representation
+        of a business and reliably surface it in the right contexts.
       </p>
     </section>
 
     <section>
-      <h2>Formalising an Undefined Space</h2>
+      <h2>Why AI Discoverability needed to be defined</h2>
       <p>
-        Before EntityWorks, AI Discoverability was a loosely used concept. It appeared in conversations and marketing copy,
-        but there was no shared definition, no agreed framework, and no measurable standard for it as a formal discipline.
-      </p>
-      <p>
-        EntityWorks formalised AI Discoverability into a coherent discipline by:
+        As AI systems increasingly act as the “front door” to the internet, organisations face new questions:
       </p>
       <ul>
-        <li>Defining its scope and purpose</li>
-        <li>Establishing a structured framework and methodology</li>
-        <li>Introducing a measurable standard through the EntityWorks Discoverability Index™</li>
-        <li>Creating a consistent lexicon and set of principles</li>
+        <li>What picture of our organisation do these systems hold?</li>
+        <li>Are we being surfaced when we should be?</li>
+        <li>Are we being confused with competitors or outdated information?</li>
       </ul>
+      <p>
+        Until now, there has been no formal discipline that names, structures, and measures this space.
+        EntityWorks defines AI Discoverability to give leaders a vocabulary and framework for dealing with it directly.
+      </p>
     </section>
 
     <section>
-      <h2>The EntityWorks Discoverability Index™ (EDI)</h2>
+      <h2>The role of the EntityWorks Discoverability Index™ (EDI)</h2>
       <p>
-        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured 0–100 framework for assessing
-        how clearly AI systems understand and surface a business.
+        The <a href="/discoverability-index.html">EntityWorks Discoverability Index™</a> is the first structured 0–100 framework dedicated to AI Discoverability.
+        It provides an assessment of how clearly and consistently AI systems can understand and surface a business entity.
       </p>
       <p>
-        It translates an emerging, hard-to-see problem into something measurable and actionable. The EDI incorporates:
+        The EDI is not an SEO metric or a marketing vanity score. It is a <strong>machine-comprehension standard</strong> for
+        the AI era, rooted in the structural signals that matter most for AI systems.
+      </p>
+    </section>
+
+    <section>
+      <h2>The role of the Entity Understanding Layer™</h2>
+      <p>
+        The <a href="/entity-understanding-layer.html">Entity Understanding Layer™ (EUL)</a> is EntityWorks’ interpretive model for how AI systems appear to build and
+        update their internal understanding of entities.
+      </p>
+      <p>
+        Where the EUL describes the patterns of identification, attribution, contextualisation, weighting, updating,
+        and propagation inside AI systems, the EDI measures how well a given organisation supports those behaviours
+        through its real-world presence.
+      </p>
+    </section>
+
+    <section>
+      <h2>Discipline-level structure</h2>
+      <p>
+        By defining AI Discoverability as a discipline, EntityWorks brings together:
       </p>
       <ul>
-        <li>A discoverability score from 0–100</li>
-        <li>Analysis across defined pillars of AI Discoverability</li>
-        <li>Identification of contradictions and fragmentation</li>
-        <li>Structured recommendations and a clear priority path</li>
+        <li>A formal definition and scope</li>
+        <li>The <a href="/discoverability-index.html">EntityWorks Discoverability Index™</a> as a measurable standard</li>
+        <li>The <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a> as an interpretive conceptual model</li>
+        <li>An evolving <a href="/lexicon.html">Lexicon</a> of terms and concepts</li>
+        <li>A methodology for practical audits and implementation</li>
       </ul>
       <p>
-        The EDI is not just a scoring mechanism; it is the practical expression of AI Discoverability as a discipline.
+        This combination turns a vague concern (“How does AI see us?”) into a structured domain leaders can act on.
+      </p>
+    </section>
+  </main>
+
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
+
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
+</body>
+</html>
