--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,7 @@
-<footer style="margin-top: 4rem; padding-top: 1.5rem; border-top: 1px solid #eee; font-size: 0.8rem; color: #666; text-align: center;">
-  <p>© 2025 EntityWorks Ltd · All rights reserved</p>
-  <p>Registered in England & Wales · Company No: 16849701</p>
-  <p>Registered Office: 82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE</p>
+<footer style="margin-top: 2rem; padding-top: 1rem; border-top: 1px solid #e0e0e0; font-size: 0.9rem; color: #666;">
+  <p>&copy; EntityWorks. All rights reserved.</p>
   <p>
-    <a href="/privacy.html" style="color: #666; text-decoration: none; margin-right: 1rem;">Privacy & GDPR</a>
-    <a href="/legal.html" style="color: #666; text-decoration: none;">Legal</a>
+    <a href="/privacy.html">Privacy</a> |
+    <a href="/legal.html">Legal</a>
   </p>
 </footer>
-
