--- a/lexicon.html
+++ b/lexicon.html
@@ -2,31 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EntityWorks Lexicon</title>
+  <title>EntityWorks Lexicon — AI Discoverability Vocabulary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="The EntityWorks Lexicon defines key terms in AI Discoverability, including the EntityWorks Discoverability Index™ and the Entity Understanding Layer™.">
+        content="The EntityWorks Lexicon defines the core vocabulary of AI Discoverability, including key terms used in the EntityWorks Discoverability Index™ (EDI), Entity Understanding Layer™, and Presence Stack™.">
   <link rel="canonical" href="https://entityworks.ai/lexicon.html">
-
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
+    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 900px; padding: 0 1rem; color: #111; }
     header, footer { margin-bottom: 2rem; }
     header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
     nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
     nav a:hover { text-decoration: underline; }
-    h2 { margin-top: 1.75rem; }
-    dt { font-weight: 600; margin-top: 1.25rem; }
-    dd { margin-left: 0; margin-bottom: 0.5rem; }
+    h2 { margin-top: 2rem; }
+    dt { font-weight: 600; margin-top: 1.4rem; }
+    dd { margin-left: 0; margin-top: 0.3rem; }
+    .intro { margin-top: 1rem; }
+    .tagline { font-style: italic; margin-top: 0.5rem; }
   </style>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "EntityWorks Lexicon",
-    "description": "The EntityWorks Lexicon defines key terms in the discipline of AI Discoverability.",
+    "name": "EntityWorks Lexicon — AI Discoverability Vocabulary",
+    "description": "A glossary defining the core terminology used in the discipline of AI Discoverability, as formalised by EntityWorks.",
     "url": "https://entityworks.ai/lexicon.html",
+    "about": {
+      "@type": "Thing",
+      "name": "AI Discoverability",
+      "description": "The discipline concerned with how clearly and consistently AI systems can understand, interpret, and surface a business or entity."
+    },
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -34,12 +39,15 @@
   }
   </script>
 </head>
-
 <body>
   <header>
     <h1>EntityWorks Lexicon</h1>
-    <p>Key terms in the discipline of AI Discoverability.</p>
-
+    <p class="intro">
+      A reference glossary for the core terminology used in the discipline of AI Discoverability.
+    </p>
+    <p class="tagline">
+      These definitions support the EntityWorks Discoverability Index™ (EDI), the Entity Understanding Layer™, and the Presence Stack™ model.
+    </p>
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
@@ -53,48 +61,137 @@
 
   <main>
     <section>
-      <h2>Core terms</h2>
+      <h2>Core Terms</h2>
       <dl>
         <dt>AI Discoverability</dt>
         <dd>
-          The discipline concerned with how AI systems understand, represent, and surface business entities when people use
-          AI-driven interfaces to search, ask questions, or seek recommendations.
+          The discipline concerned with how clearly and consistently AI systems can understand, interpret,
+          and surface a business or entity.
         </dd>
 
-        <dt>EntityWorks Discoverability Index™ (EDI)</dt>
+        <dt>Machine-Legibility</dt>
         <dd>
-          A structured 0–100 framework maintained by EntityWorks for measuring how clearly and consistently AI systems can
-          understand and surface a specific business entity. See <a href="/discoverability-index.html">EDI overview</a>.
+          The degree to which a business’s information is structured, unambiguous, and readable by AI systems,
+          independent of how it appears to humans.
         </dd>
 
-        <dt>Entity Understanding Layer™ (EUL)</dt>
+        <dt>Entity Clarity</dt>
         <dd>
-          EntityWorks’ interpretive model for how AI systems appear to build and update their internal understanding of entities
-          through behaviours such as identification, attribution, contextualisation, weighting, updating, and propagation.
+          How confidently an AI system can determine what an organisation is, what it does, and what it offers
+          based on available information.
+        </dd>
+
+        <dt>Entity Understanding Layer™</dt>
+        <dd>
+          EntityWorks’ interpretive model for how AI systems appear to build and update their internal understanding
+          of entities. Instead of exposing proprietary internals, it organises observable behaviour into six
+          higher-level patterns we can reasonably infer are happening:
+          Identification, Attribution, Contextualisation, Weighting, Updating, and Propagation. Together, these
+          behaviours offer a structured way to think about how AI systems internally process entities and allow
+          leaders to reason about “how AI sees us” without overstating claims about any specific model.
           See <a href="/entity-understanding-layer.html">EUL overview</a>.
         </dd>
 
-        <dt>Machine Identity</dt>
+        <dt>Representation Drift</dt>
         <dd>
-          The effective internal representation AI systems hold of a business entity, based on the signals, structure, and
-          corroboration they can see across the web and other sources.
+          The gradual divergence between how a business describes itself and how AI systems come to describe it over time.
+        </dd>
+
+        <dt>Claims Discipline</dt>
+        <dd>
+          The practice of ensuring that all statements about AI Discoverability, the EntityWorks
+          Discoverability Index™ (EDI), and related outcomes remain verifiable, proportionate, and non-misleading.
         </dd>
 
         <dt>Structured Data</dt>
         <dd>
-          Machine-readable information about an entity, such as schema markup, metadata, canonical identity fields, and structured
-          definitions that AI systems can parse and use directly.
+          Information expressed in machine-readable formats (such as schema.org JSON-LD, metadata, or well-formed tables)
+          that helps AI systems reliably interpret entities.
         </dd>
 
         <dt>AI Readiness</dt>
         <dd>
-          The degree to which an entity’s digital presence is aligned with the interpretive patterns AI models use today, including
-          naming consistency, conceptual clarity, and signal coherence across sources.
+          The extent to which a business’s public footprint is clear, up to date, and aligned across the key sources
+          AI systems rely on.
         </dd>
 
         <dt>Continuous Optimisation</dt>
         <dd>
-          Ongoing work to maintain and improve a stable, reliable, and evolving machine identity as AI models and contexts change.
+          The ongoing process of monitoring and adjusting a business’s machine-legible presence as AI systems,
+          models, and information sources evolve.
+        </dd>
+
+        <dt>Discoverability Score (0–100)</dt>
+        <dd>
+          A composite score indicating how clearly AI systems can understand and surface a business or entity,
+          as measured by the EntityWorks Discoverability Index™.
+        </dd>
+
+        <dt>EDI Pillars</dt>
+        <dd>
+          The three structural dimensions used by the EntityWorks Discoverability Index™:
+          (1) Structured Data, (2) AI Readiness, and (3) Continuous Optimisation.
+        </dd>
+
+        <dt>Profile Summary</dt>
+        <dd>
+          A concise narrative describing how AI systems currently perceive and present a business, based on EDI findings.
+        </dd>
+
+        <dt>Priority Path</dt>
+        <dd>
+          A sequenced set of recommendations designed to improve a business’s Discoverability Score in the most efficient
+          and impactful order.
+        </dd>
+
+        <dt>Presence Stack™</dt>
+        <dd>
+          A layered model describing the components that shape how AI systems see, interpret, and prioritise a business’s
+          presence across the digital environment.
+        </dd>
+
+        <dt>Inter-Source Alignment</dt>
+        <dd>
+          The level of consistency between multiple public sources (such as websites, profiles, directories, and knowledge graphs)
+          when they describe the same organisation.
+        </dd>
+
+        <dt>Semantic Integrity</dt>
+        <dd>
+          The preservation of meaning across different descriptions, channels, and formats, so that AI systems receive
+          a coherent picture of the business.
+        </dd>
+
+        <dt>Entity Surface Area</dt>
+        <dd>
+          The total volume and diversity of information about a business that is available for AI systems to ingest,
+          including both structured and unstructured data.
+        </dd>
+
+        <dt>Category Creation</dt>
+        <dd>
+          The act of defining, naming, and formalising a discipline or field where no coherent, shared structure
+          previously existed.
+        </dd>
+
+        <dt>Entity-Coherence Score</dt>
+        <dd>
+          An internal metric concept for assessing how uniformly and consistently a business is represented
+          across AI-indexed sources.
+        </dd>
+
+        <dt>EntityWorks Discoverability Index™ (EDI)</dt>
+        <dd>
+          A structured, measurable framework for assessing AI Discoverability and generating a Discoverability Score,
+          Profile Summary, and Priority Path for a business. The EDI sits on top of the patterns described in the
+          Entity Understanding Layer™, translating them into a practical 0–100 assessment. See
+          <a href="/discoverability-index.html">EDI overview</a>.
+        </dd>
+
+        <dt>Legacy SEO</dt>
+        <dd>
+          A shorthand for traditional, search-engine-focused optimisation practices that prioritise human search results
+          and rankings rather than AI interpretation and machine-legibility.
         </dd>
       </dl>
     </section>
@@ -103,12 +200,12 @@
   <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
     Last updated: November 2025
   </p>
-
+  
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
-      .then(response => response.text())
-      .then(data => {
+      .then((response) => response.text())
+      .then((data) => {
         document.getElementById("footer").innerHTML = data;
       });
   </script>
