--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
+        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as a measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability.html">
 
   <style>
@@ -24,8 +24,13 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "AI Discoverability: Defining the Discipline",
-    "description": "EntityWorks formally defines AI Discoverability as a discipline with principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.",
+    "description": "EntityWorks defines AI Discoverability as a formal discipline with clear principles, structure, and a measurable index.",
     "url": "https://entityworks.ai/defining-ai-discoverability.html",
+    "about": {
+      "@type": "Thing",
+      "name": "AI Discoverability",
+      "description": "A formal discipline focused on how AI systems understand and surface business entities."
+    },
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -37,7 +42,7 @@
 <body>
   <header>
     <h1>AI Discoverability: Defining the Discipline</h1>
-    <p>Putting structure, language, and standards around how AI systems discover and represent businesses.</p>
+    <p>How EntityWorks formalised AI Discoverability into a coherent, measurable field.</p>
 
     <nav>
       <a href="/">Home</a>
@@ -52,73 +57,51 @@
 
   <main>
     <section>
-      <h2>What is AI Discoverability?</h2>
+      <h2>What Is AI Discoverability?</h2>
       <p>
-        AI Discoverability is the discipline concerned with how AI systems understand, represent, and surface
-        business entities when people ask questions, search, or seek recommendations through AI interfaces.
+        <strong>AI Discoverability</strong> is the discipline of ensuring that a business or entity is clearly understood,
+        consistently represented, and reliably surfaced by modern AI systems.
       </p>
       <p>
-        It goes beyond traditional SEO, which is centred on human-driven search engines and page rankings.
-        AI Discoverability focuses on whether AI systems can form an accurate, coherent internal representation
-        of a business and reliably surface it in the right contexts.
+        It focuses on how models interpret entities — not just how humans search. That includes structure, consistency,
+        source alignment, and how information about a business is synthesised into answers for end users.
       </p>
     </section>
 
     <section>
-      <h2>Why AI Discoverability needed to be defined</h2>
+      <h2>Formalising an Undefined Space</h2>
       <p>
-        As AI systems increasingly act as the “front door” to the internet, organisations face new questions:
+        Before EntityWorks, AI Discoverability was a loosely used concept. It appeared in conversations and marketing copy,
+        but there was no shared definition, no agreed framework, and no measurable standard for it as a formal discipline.
+      </p>
+      <p>
+        EntityWorks formalised AI Discoverability into a coherent discipline by:
       </p>
       <ul>
-        <li>What picture of our organisation do these systems hold?</li>
-        <li>Are we being surfaced when we should be?</li>
-        <li>Are we being confused with competitors or outdated information?</li>
+        <li>Defining its scope and purpose</li>
+        <li>Establishing a structured framework and methodology</li>
+        <li>Introducing a measurable standard through the EntityWorks Discoverability Index™</li>
+        <li>Creating a consistent lexicon and set of principles</li>
       </ul>
-      <p>
-        Until now, there has been no formal discipline that names, structures, and measures this space.
-        EntityWorks defines AI Discoverability to give leaders a vocabulary and framework for dealing with it directly.
-      </p>
     </section>
 
     <section>
-      <h2>The role of the EntityWorks Discoverability Index™ (EDI)</h2>
+      <h2>The EntityWorks Discoverability Index™ (EDI)</h2>
       <p>
-        The <a href="/discoverability-index.html">EntityWorks Discoverability Index™</a> is the first structured 0–100 framework dedicated to AI Discoverability.
-        It provides an assessment of how clearly and consistently AI systems can understand and surface a business entity.
+        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured 0–100 framework for assessing
+        how clearly AI systems understand and surface a business.
       </p>
       <p>
-        The EDI is not an SEO metric or a marketing vanity score. It is a <strong>machine-comprehension standard</strong> for
-        the AI era, rooted in the structural signals that matter most for AI systems.
-      </p>
-    </section>
-
-    <section>
-      <h2>The role of the Entity Understanding Layer™</h2>
-      <p>
-        The <a href="/entity-understanding-layer.html">Entity Understanding Layer™ (EUL)</a> is EntityWorks’ interpretive model for how AI systems appear to build and
-        update their internal understanding of entities.
-      </p>
-      <p>
-        Where the EUL describes the patterns of identification, attribution, contextualisation, weighting, updating,
-        and propagation inside AI systems, the EDI measures how well a given organisation supports those behaviours
-        through its real-world presence.
-      </p>
-    </section>
-
-    <section>
-      <h2>Discipline-level structure</h2>
-      <p>
-        By defining AI Discoverability as a discipline, EntityWorks brings together:
+        It translates an emerging, hard-to-see problem into something measurable and actionable. The EDI incorporates:
       </p>
       <ul>
-        <li>A formal definition and scope</li>
-        <li>The <a href="/discoverability-index.html">EntityWorks Discoverability Index™</a> as a measurable standard</li>
-        <li>The <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a> as an interpretive conceptual model</li>
-        <li>An evolving <a href="/lexicon.html">Lexicon</a> of terms and concepts</li>
-        <li>A methodology for practical audits and implementation</li>
+        <li>A discoverability score from 0–100</li>
+        <li>Analysis across defined pillars of AI Discoverability</li>
+        <li>Identification of contradictions and fragmentation</li>
+        <li>Structured recommendations and a clear priority path</li>
       </ul>
       <p>
-        This combination turns a vague concern (“How does AI see us?”) into a structured domain leaders can act on.
+        The EDI is not just a scoring mechanism; it is the practical expression of AI Discoverability as a discipline.
       </p>
     </section>
   </main>
@@ -130,8 +113,8 @@
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
-      .then(response => response.text())
-      .then(data => {
+      .then((response) => response.text())
+      .then((data) => {
         document.getElementById("footer").innerHTML = data;
       });
   </script>
