--- a/privacy.html
+++ b/privacy.html
@@ -2,67 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy — EntityWorks</title>
+  <title>Privacy & GDPR — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <meta name="description" content="Privacy policy for EntityWorks.">
+  <meta name="description" content="EntityWorks Privacy & GDPR Notice">
   <link rel="canonical" href="https://entityworks.ai/privacy.html">
 
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
-    nav a:hover { text-decoration: underline; }
+    body { font-family: system-ui, sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
+    h1 { font-size: 1.8rem; margin-bottom: 1rem; }
     h2 { margin-top: 1.75rem; }
+    p, li { margin-bottom: 0.75rem; }
   </style>
 </head>
-
 <body>
-  <header>
-    <h1>Privacy Policy</h1>
-    <p>How EntityWorks handles your data.</p>
 
-    <nav>
-      <a href="/">Home</a>
-      <a href="/category-creation-declaration.html">Category Declaration</a>
-      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-      <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-      <a href="/lexicon.html">Lexicon</a>
-    </nav>
-  </header>
+  <h1>Privacy & GDPR Notice</h1>
 
-  <main>
-    <section>
-      <h2>No cookies, no tracking</h2>
-      <p>
-        EntityWorks does not use cookies, analytics tools, or any tracking technologies.
-        No information is stored on your device and no behavioural data is collected.
-      </p>
-    </section>
+  <p><strong>Last updated: 15th November 2025</strong></p>
 
-    <section>
-      <h2>Contact</h2>
-      <p>
-        If you have any questions about this policy, you can contact us at
-        <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-      </p>
-    </section>
-  </main>
-
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
+  <p>
+    EntityWorks Ltd (“we”, “us”, “our”) operates https://entityworks.ai.  
+    We are committed to protecting your privacy and being transparent about how we use data.
   </p>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+  <h2>1. We Do Not Collect Personal Data</h2>
+  <p>
+    EntityWorks does not collect, store, process, or track any personal information from visitors to this website.
+  </p>
+
+  <h2>2. Cookie & Tracking Statement</h2>
+  <p><strong>
+    EntityWorks does not use cookies, analytics tools, or any tracking technologies.  
+    No information is stored on your device and no behavioural data is collected.
+  </strong></p>
+
+  <h2>3. Voluntary Contact</h2>
+  <p>
+    If you choose to contact us by email at 
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
+    your message will be processed solely for the purpose of responding to your enquiry.
+  </p>
+  <p>
+    We do not add your details to marketing lists, share them with third parties, or retain them longer than necessary.
+  </p>
+
+  <h2>4. Legal Basis for Processing (Article 6 UK GDPR)</h2>
+  <p>
+    If you email us, our legal basis for processing your message is:
+    <strong>Legitimate Interest — responding to an enquiry you initiated.</strong>
+  </p>
+
+  <h2>5. Hosting & Technical Logs</h2>
+  <p>
+    This website is hosted on GitHub Pages.  
+    GitHub may collect minimal technical logs (e.g., IP address) for security and misuse prevention.  
+    These logs are controlled by GitHub under their own privacy policy.
+  </p>
+
+  <h2>6. Your Rights</h2>
+  <p>Under the UK GDPR, you have the right to:</p>
+  <ul>
+    <li>access your personal data (if you have emailed us)</li>
+    <li>request correction or deletion</li>
+    <li>object to processing</li>
+  </ul>
+
+  <p>To exercise any of these rights, email us at  
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
+  </p>
+
+  <h2>7. Changes to This Notice</h2>
+  <p>
+    We may update this notice when necessary.  
+    The latest version will always be available on this page.
+  </p>
+
+  <h2>8. Contact Information</h2>
+  <p>
+    EntityWorks Ltd<br>
+    Registered Office: 82a James Carter Road, Mildenhall,<br>
+    Bury St. Edmunds, England, IP28 7DE<br>
+    Company No: 16849701
+  </p>
+
 </body>
 </html>
