--- a/legal.html
+++ b/legal.html
@@ -2,84 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Legal Notice — EntityWorks</title>
+  <title>Legal — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <meta name="description" content="Legal information and disclaimers for EntityWorks.">
+  <meta name="description" content="EntityWorks Legal Information and Terms of Use">
   <link rel="canonical" href="https://entityworks.ai/legal.html">
 
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
-    nav a:hover { text-decoration: underline; }
+    body { font-family: system-ui, sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
+    h1 { font-size: 1.8rem; margin-bottom: 1rem; }
     h2 { margin-top: 1.75rem; }
+    p, li { margin-bottom: 0.75rem; }
   </style>
 </head>
-
 <body>
-  <header>
-    <h1>Legal Notice</h1>
-    <p>Important information about EntityWorks content and services.</p>
 
-    <nav>
-      <a href="/">Home</a>
-      <a href="/category-creation-declaration.html">Category Declaration</a>
-      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-      <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-      <a href="/lexicon.html">Lexicon</a>
-    </nav>
-  </header>
+  <h1>Legal Information & Terms of Use</h1>
 
-  <main>
-    <section>
-      <h2>Informational purposes only</h2>
-      <p>
-        The content on this website is provided for informational purposes only. It does not constitute legal,
-        financial, or investment advice, and should not be relied upon as such.
-      </p>
-    </section>
+  <p><strong>Last updated: November 2025</strong></p>
 
-    <section>
-      <h2>No guarantees</h2>
-      <p>
-        While EntityWorks takes care to ensure that information is accurate and up to date at the time of publication,
-        we make no representations, warranties, or guarantees, whether express or implied, that the content is complete,
-        reliable, or suitable for any particular purpose.
-      </p>
-    </section>
-
-    <section>
-      <h2>Third-party systems</h2>
-      <p>
-        Our work involves interacting with third-party AI systems and platforms. EntityWorks has no control over how
-        these systems operate internally and makes no guarantees about their behaviour, availability, or outputs.
-      </p>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <p>
-        For legal or compliance queries, please contact
-        <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-      </p>
-    </section>
-  </main>
-
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
+  <p>
+    This page outlines key legal information regarding the use of the EntityWorks website
+    (https://entityworks.ai). By using this site, you agree to the following terms. If you do
+    not agree, please discontinue use of the website.
   </p>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+  <h2>1. Informational Use Only</h2>
+  <p>
+    The content on this website is provided for general informational purposes about EntityWorks,
+    our methodology, and the discipline of AI Discoverability. It does not constitute advice,
+    a certification, or a commercial offer.
+  </p>
+
+  <h2>2. Accuracy of Information</h2>
+  <p>
+    We aim to provide accurate and up-to-date information. However, EntityWorks Ltd makes no guarantees,
+    representations, or warranties regarding the completeness or reliability of any content on this site.
+  </p>
+
+  <h2>3. Intellectual Property</h2>
+  <p>
+    All content on this site — including text, structure, design elements, and the 
+    EntityWorks Discoverability Index™ — is the intellectual property of EntityWorks Ltd.
+    You may not copy, reproduce, or distribute any material without written permission.
+  </p>
+
+  <h2>4. External Links</h2>
+  <p>
+    This website may include links to external websites. EntityWorks Ltd is not responsible for
+    the content, accuracy, or policies of third-party sites.
+  </p>
+
+  <h2>5. Limitation of Liability</h2>
+  <p>
+    EntityWorks Ltd is not liable for any loss or damage arising from your use of this website,
+    including reliance on information presented here.
+  </p>
+
+  <h2>6. Changes to These Terms</h2>
+  <p>
+    We may update these terms from time to time. The latest version will always be available on this page.
+  </p>
+
+  <h2>7. Company Information</h2>
+  <p>
+    EntityWorks Ltd<br>
+    Registered in England & Wales<br>
+    Company No: 16849701<br>
+    Registered Office: 82a James Carter Road, Mildenhall,<br>
+    Bury St. Edmunds, England, IP28 7DE
+  </p>
+
 </body>
 </html>
