--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as a measurable standard.">
+        content="EntityWorks formally defines AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability.html">
 
   <style>
@@ -50,7 +50,6 @@
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
       <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
@@ -113,10 +112,11 @@
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
+      .then(response => response.text())
+      .then(data => {
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+
 </body>
 </html>
