--- a/discoverability-index.html
+++ b/discoverability-index.html
@@ -74,7 +74,6 @@
   }
   </script>
 </head>
-
 <body>
   <header>
     <h1>EntityWorks Discoverability Index™ (EDI)</h1>
@@ -92,8 +91,161 @@
   </header>
 
   <main>
+    <section>
+      <h2>What the EDI Is</h2>
+      <p>
+        AI systems are rapidly becoming the primary way people discover, evaluate, and interact with businesses. Yet until now,
+        there has been no standard for understanding how clearly a business is interpreted and surfaced by AI models.
+      </p>
+      <p>
+        The <strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured 0–100 assessment of how clearly and
+        consistently AI systems can understand and surface a business entity.
+      </p>
+      <p>
+        It is not an SEO metric. It is not a marketing measure. It is a
+        <strong>machine-comprehension standard</strong> designed for the AI era.
+      </p>
+    </section>
 
-    <!-- content unchanged until EDI as Part of a New Discipline -->
+    <section>
+      <h2>Why the EDI Exists</h2>
+      <p>
+        AI systems rely on structured data, machine-readable context, entity definitions, metadata integrity, cross-source
+        corroboration, and consistent naming and signals.
+      </p>
+      <p>
+        But businesses have never had a formal way to measure:
+      </p>
+      <ul>
+        <li>how understandable they are to AI</li>
+        <li>how coherent their machine identity is</li>
+        <li>whether AI models can reliably surface them</li>
+        <li>where ambiguity, drift, or inconsistency is occurring</li>
+        <li>whether their digital structure supports accurate AI interpretation</li>
+      </ul>
+      <p>
+        The EDI establishes the structural foundation required for businesses to be represented accurately in AI-led environments.
+      </p>
+    </section>
+
+    <section>
+      <h2>The Three Structural Pillars of the EDI</h2>
+      <p>
+        These pillars form the core dimensions of <strong>AI Discoverability</strong>. They define how AI systems interpret,
+        understand, and surface businesses with clarity and consistency. We publish these three as the external-facing structure
+        of the discipline.
+      </p>
+
+      <h3>Pillar 1 — Structured Data</h3>
+      <p>
+        The clarity, depth, and accuracy of the machine-readable information a business provides.
+      </p>
+      <ul>
+        <li>Schema</li>
+        <li>Metadata</li>
+        <li>Structured definitions</li>
+        <li>Canonical identity fields</li>
+        <li>Machine-friendly descriptions</li>
+      </ul>
+      <p>
+        AI systems depend on structure to understand entities.
+      </p>
+
+      <h3>Pillar 2 — AI Readiness</h3>
+      <p>
+        How well a business’s digital presence aligns with the interpretive patterns AI models use today.
+      </p>
+      <ul>
+        <li>Naming consistency</li>
+        <li>Conceptual clarity</li>
+        <li>Signal coherence across sources</li>
+        <li>Platform alignment</li>
+        <li>Entity disambiguation</li>
+      </ul>
+      <p>
+        AI readiness strongly influences whether a business is recognised or misinterpreted.
+      </p>
+
+      <h3>Pillar 3 — Continuous Optimisation</h3>
+      <p>
+        Whether the business maintains a stable, reliable, and evolving machine identity as models and contexts change.
+      </p>
+      <ul>
+        <li>Monitoring drift</li>
+        <li>Reinforcing corroboration</li>
+        <li>Maintaining digital integrity</li>
+        <li>Iterative alignment with evolving AI behaviours</li>
+      </ul>
+      <p>
+        AI systems evolve. Businesses need to evolve with them.
+      </p>
+    </section>
+
+    <section>
+      <h2>A Note on Completeness</h2>
+      <p>
+        The EDI contains additional internal layers that ensure the score remains:
+      </p>
+      <ul>
+        <li>robust</li>
+        <li>consistent</li>
+        <li>model-agnostic</li>
+        <li>resistant to manipulation</li>
+        <li>reflective of how modern AI systems process complex entities</li>
+      </ul>
+      <p>
+        These parameters remain proprietary to ensure the integrity, stability, and long-term reliability of the EDI as a
+        machine-era standard.
+      </p>
+      <p>
+        Nothing in this public overview reveals EntityWorks’ internal evaluation logic or weighting model.
+      </p>
+    </section>
+
+    <section>
+      <h2>What an EDI Score Reveals</h2>
+      <p>
+        An EDI score provides clarity on:
+      </p>
+      <ul>
+        <li>how well AI systems understand the business</li>
+        <li>how consistently the business is surfaced across models</li>
+        <li>where ambiguity or misinterpretation may occur</li>
+        <li>how resilient the machine identity is to model changes</li>
+        <li>whether competitors are more “machine-ready”</li>
+        <li>what structural improvements are required</li>
+      </ul>
+      <p>
+        It is a <strong>diagnostic tool for machine-era visibility</strong>.
+      </p>
+    </section>
+
+    <section>
+      <h2>Why the EDI Matters</h2>
+      <p>
+        As AI becomes the primary interface for discovery:
+      </p>
+      <h3>Businesses with unclear, inconsistent, or fragmented machine identities may:</h3>
+      <ul>
+        <li>be misinterpreted</li>
+        <li>be confused with competitors</li>
+        <li>lose contextual relevance</li>
+        <li>appear less frequently across AI interfaces</li>
+        <li>experience reduced trust or discoverability</li>
+      </ul>
+
+      <h3>Businesses with strong machine identities are more likely to:</h3>
+      <ul>
+        <li>be understood</li>
+        <li>be differentiated</li>
+        <li>be surfaced correctly</li>
+        <li>be consistently represented</li>
+        <li>maintain visibility as models evolve</li>
+      </ul>
+      <p>
+        The EDI enables businesses to strengthen these foundations proactively.
+      </p>
+    </section>
 
     <section>
       <h2>The EDI as Part of a New Discipline</h2>
@@ -107,10 +259,6 @@
         Through the definition, the structured framework, the lexicon, the methodology, and the measurable standard,
         EntityWorks establishes the foundational model for how businesses prepare themselves for AI-first visibility.
       </p>
-      <p>
-        The EDI is complemented by the <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>,
-        which offers a way to think about how AI systems internally process and update their understanding of entities.
-      </p>
     </section>
 
     <section>
@@ -120,7 +268,6 @@
         <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
       </p>
     </section>
-
   </main>
 
   <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
@@ -135,6 +282,5 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
-
 </body>
 </html>
