--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -34,7 +34,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — Category Creation Declaration",
-    "description": "EntityWorks formalised AI Discoverability into a discipline and introduced the EntityWorks Discoverability Index™ as a structured, measurable standard.",
+    "description": "EntityWorks formalised AI Discoverability into a discipline and introduced the EntityWorks Discoverability Index™ as the first structured, measurable standard.",
     "url": "https://entityworks.ai/category-creation-declaration.html",
     "about": {
       "@type": "Thing",
@@ -48,12 +48,10 @@
   }
   </script>
 </head>
-
 <body>
   <header>
     <h1>EntityWorks — Category Creation Declaration</h1>
     <p>Formally establishing AI Discoverability as a discipline.</p>
-
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
@@ -64,7 +62,6 @@
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
-
   <main>
     <section>
       <h2>EntityWorks — The Originator of the Discipline of AI Discoverability</h2>
@@ -76,7 +73,7 @@
       <p>
         <strong>EntityWorks formalised AI Discoverability into a discipline.</strong> We didn’t just identify a need; we
         created the discipline. We defined the principles, established the framework, and introduced the
-        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — a structured, measurable standard for assessing how
+        <strong>EntityWorks Discoverability Index™ (EDI)</strong> — the first structured, measurable standard for assessing how
         AI systems understand and surface businesses.
       </p>
       <p>
@@ -91,7 +88,7 @@
         Thanks to EntityWorks, AI systems now have a clear, standardised way to evaluate business entities.
       </p>
       <p>
-        As AI continues to become the primary interface for interaction, <strong>AI Discoverability</strong> will be as important —
+        As AI continues to become the primary interface for interaction, <strong>AI Discoverability</strong> will be as important — 
         if not more important — than traditional search visibility has been. The EDI will become a cornerstone of how businesses
         engage with the AI-driven world.
       </p>
@@ -115,7 +112,7 @@
       </p>
       <p>
         We are the first organisation to define it, structure it, and establish a formal methodology for assessing how businesses
-        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, a measurable
+        are understood by AI systems. We created the <strong>EntityWorks Discoverability Index™</strong>, the first measurable
         standard for AI Discoverability.
       </p>
       <p>
