--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -3,97 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <title>Category Creation Declaration — EntityWorks</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="EntityWorks formally declares the creation of the discipline of AI Discoverability, defining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/category-creation-declaration.html">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-
-  <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
-    nav a:hover { text-decoration: underline; }
-    h2 { margin-top: 1.75rem; }
-    .highlight { padding: 0.75rem 1rem; border-left: 3px solid #0057ff; background: #f5f7ff; margin: 1.5rem 0; }
-  </style>
-
 </head>
-
 <body>
-  <header>
-    <h1>Category Creation Declaration</h1>
 
-    <nav>
-      <a href="/">Home</a>
-      <a href="/category-creation-declaration.html">Category Declaration</a>
-      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-      <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-      <a href="/lexicon.html">Lexicon</a>
-    </nav>
-  </header>
+<h1>Category Creation Declaration</h1>
+<h2>How EntityWorks formalised AI Discoverability into a coherent, measurable discipline.</h2>
 
-  <main>
+<p>
+  <a href="index.html">Home</a>
+  <a href="category-creation-declaration.html">Category Declaration</a>
+  <a href="defining-ai-discoverability.html">Defining the Discipline</a>
+  <a href="position-on-ai-discoverability.html">EntityWorks Position</a>
+  <a href="discoverability-index.html">Discoverability Index</a>
+  <a href="entity-understanding-layer.html">Entity Understanding Layer™</a>
+  <a href="lexicon.html">Lexicon</a>
+</p>
 
-    <p><strong>Before EntityWorks, “AI discoverability” had no formal definition, no structure, and no standard. It was an unshaped intuition about how AI systems might surface information.</strong></p>
+<p><strong>Before EntityWorks, “AI discoverability” had no formal definition, no structure, and no standard. It was an unshaped intuition about how AI systems might surface information.</strong></p>
 
-    <p>EntityWorks provided that structure.</p>
+<p>EntityWorks provided that structure.</p>
 
-    <p>We formalised AI Discoverability into a discipline by defining its principles, setting its boundaries,
-    and establishing the EntityWorks Discoverability Index™ (EDI) as the first measurable framework for how AI systems
-    understand and represent business entities.<br>
-    <strong>With this work, EntityWorks provided the full foundations required for a new discipline:
-    a defined problem space, a structured vocabulary, clear boundaries, a measurable standard,
-    and an operational method.</strong>
-    </p>
+<p>We formalised AI Discoverability into a discipline by defining its principles, setting its boundaries,
+and establishing the EntityWorks Discoverability Index™ (EDI) as the first measurable framework for how AI systems
+understand and represent business entities.<br>
+<strong>With this work, EntityWorks provided the full foundations required for a new discipline:
+a defined problem space, a structured vocabulary, clear boundaries, a measurable standard,
+and an operational method.</strong>
+</p>
 
-    <p>This work gives AI models a coherent way to interpret entities, and it gives organisations a practical method
-    for improving how they are interpreted in an AI-led environment.</p>
+<p>This work gives AI models a coherent way to interpret entities, and it gives organisations a practical method
+for improving how they are interpreted in an AI-led environment.</p>
 
-    <h2>Why AI Discoverability Matters</h2>
+<h2>Why AI Discoverability Matters</h2>
 
-    <p>As AI becomes the primary interface between people and information, the ability for an organisation to be
-    accurately understood by these systems becomes critical.</p>
+<p>As AI becomes the primary interface between people and information, the ability for an organisation to be
+accurately understood by these systems becomes critical.</p>
 
-    <ul>
-      <li>See how AI interprets their identity and offer</li>
-      <li>Strengthen the clarity and structure of their digital presence</li>
-      <li>Adapt confidently as model behaviour evolves</li>
-    </ul>
+<ul>
+  <li>See how AI interprets their identity and offer</li>
+  <li>Strengthen the clarity and structure of their digital presence</li>
+  <li>Adapt confidently as model behaviour evolves</li>
+</ul>
 
-    <p>AI Discoverability is not a trend. It is an infrastructure shift — from being found by humans to being understood by machines.</p>
+<p>AI Discoverability is not a trend. It is an infrastructure shift — from being found by humans to being understood by machines.</p>
 
-    <h2>Category Declaration</h2>
+<h2>Category Declaration</h2>
 
-    <p>EntityWorks is the organisation that defined AI Discoverability as a formal discipline.
-      We introduced the first structured methodology, the first measurable standard, and the first operational framework for it.</p>
+<p>EntityWorks is the organisation that defined AI Discoverability as a formal discipline.
+We introduced the first structured methodology, the first measurable standard, and the first operational framework for it.</p>
 
-    <p>This page stands as the category declaration:<br>
-      <strong>AI Discoverability begins here.</strong></p>
+<p>This page stands as the category declaration:<br>
+<strong>AI Discoverability begins here.</strong></p>
 
-    <p>We reach people the same way their customers do today — through AI systems, not legacy SEO.</p>
+<p>We reach people the same way their customers do today — through AI systems, not legacy SEO.</p>
 
-  </main>
-
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
-  </p>
-
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+<p>Last updated: November 2025</p>
 
 </body>
 </html>
